User类添加构造函数